tree-sitter-tlang/test/corpus/expressions.txt
================================================================================
Number literals
================================================================================

42
3.14
0xFF
0b1010
0o777

---

(source_file
  (expression_statement (number))
  (expression_statement (number))
  (expression_statement (number))
  (expression_statement (number))
  (expression_statement (number)))

================================================================================
String literal
================================================================================

"hello world"

---

(source_file
  (expression_statement
    (string)))

================================================================================
Boolean literals
================================================================================

true
false

---

(source_file
  (expression_statement (boolean_literal))
  (expression_statement (boolean_literal)))

================================================================================
List expression
================================================================================

[1, 2, 3]

---

(source_file
  (expression_statement
    (list_expression
      (number)
      (number)
      (number))))

================================================================================
Empty list
================================================================================

[]

---

(source_file
  (expression_statement
    (list_expression)))

================================================================================
List spread
================================================================================

[x, ...rest]

---

(source_file
  (expression_statement
    (list_expression
      (identifier)
      (identifier))))

================================================================================
Binary arithmetic
================================================================================

1 + 2 * 3

---

(source_file
  (expression_statement
    (binary_expression
      left: (number)
      right: (binary_expression
        left: (number)
        right: (number)))))

================================================================================
Comparison
================================================================================

x == y

---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (identifier))))

================================================================================
Match operators
================================================================================

x =~ re"\d+"
x !~ re"^\d+$"

---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (tagged_string
        tag: (tagged_string_tag)
        (tagged_string_start)
        (tagged_string_content)
        (tagged_string_end))))
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (tagged_string
        tag: (tagged_string_tag)
        (tagged_string_start)
        (tagged_string_content)
        (tagged_string_end)))))

================================================================================
Tagged string literal
================================================================================

re"\d+"

---

(source_file
  (expression_statement
    (tagged_string
      tag: (tagged_string_tag)
      (tagged_string_start)
      (tagged_string_content)
      (tagged_string_end))))

================================================================================
Pipeline with tagged string
================================================================================

"hello" |> re"\s+".replace_all(" ") |> log()

---

(source_file
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (string)
        right: (call_expression
          callee: (member_expression
            object: (tagged_string
              tag: (tagged_string_tag)
              (tagged_string_start)
              (tagged_string_content)
              (tagged_string_end))
            property: (property_name (identifier)))
          arguments: (argument_list (string))))
      right: (call_expression
        callee: (identifier)
        arguments: (argument_list)))))

================================================================================
Tagged string with interpolation
================================================================================

html"<div>{name}</div>"

---

(source_file
  (expression_statement
    (tagged_string
      tag: (tagged_string_tag)
      (tagged_string_start)
      (tagged_string_content)
      (interpolation (identifier))
      (tagged_string_content)
      (tagged_string_end))))

================================================================================
Tagged string with multiple interpolations
================================================================================

sql"SELECT {cols} FROM {table}"

---

(source_file
  (expression_statement
    (tagged_string
      tag: (tagged_string_tag)
      (tagged_string_start)
      (tagged_string_content)
      (interpolation (identifier))
      (tagged_string_content)
      (interpolation (identifier))
      (tagged_string_end))))

================================================================================
Tagged string with expression interpolation
================================================================================

html"{x + 1}"

---

(source_file
  (expression_statement
    (tagged_string
      tag: (tagged_string_tag)
      (tagged_string_start)
      (interpolation
        (binary_expression
          left: (identifier)
          right: (number)))
      (tagged_string_end))))

================================================================================
Tagged string with regex quantifier (no interpolation)
================================================================================

re"\d{2,5}"

---

(source_file
  (expression_statement
    (tagged_string
      tag: (tagged_string_tag)
      (tagged_string_start)
      (tagged_string_content)
      (tagged_string_end))))

================================================================================
Triple-quoted string
================================================================================

"""Hello, World!"""

---

(source_file
  (expression_statement
    (string)))

================================================================================
Triple-quoted string in variable declaration
================================================================================

let msg = """Hello, World!""";

---

(source_file
  (variable_declaration
    pattern: (pattern_assign
      pattern: (binding)
      default: (string))))

================================================================================
Triple-quoted single-quoted string
================================================================================

'''Hello, World!'''

---

(source_file
  (expression_statement
    (string)))

================================================================================
Triple-quoted multiline string
================================================================================

let s = """
line 1
line 2
"""

---

(source_file
  (variable_declaration
    pattern: (pattern_assign
      pattern: (binding)
      default: (string))))

================================================================================
Triple-quoted string with embedded quotes
================================================================================

"""She said "hi" today"""

---

(source_file
  (expression_statement
    (string)))

================================================================================
Tagged triple-quoted string
================================================================================

f"""Hello, {name}!"""

---

(source_file
  (expression_statement
    (tagged_string
      tag: (tagged_string_tag)
      (tagged_string_start)
      (tagged_string_content)
      (interpolation (identifier))
      (tagged_string_content)
      (tagged_string_end))))

================================================================================
Tagged triple-quoted multiline string
================================================================================

html"""
<div>{content}</div>
"""

---

(source_file
  (expression_statement
    (tagged_string
      tag: (tagged_string_tag)
      (tagged_string_start)
      (tagged_string_content)
      (interpolation (identifier))
      (tagged_string_content)
      (tagged_string_end))))

================================================================================
Pipeline operator
================================================================================

x |> f

---

(source_file
  (expression_statement
    (binary_expression
      left: (identifier)
      right: (identifier))))

================================================================================
Implements operator before pipeline
================================================================================

circle implements Drawable |> log()

---

(source_file
  (expression_statement
    (binary_expression
      left: (implements_expression
        left: (identifier)
        protocol: (protocol_path
          (type_identifier)))
      right: (call_expression
        callee: (identifier)
        arguments: (argument_list)))))

================================================================================
Matches operator
================================================================================

value matches Some(item)

---

(source_file
  (expression_statement
    (matches_expression
      left: (identifier)
      pattern: (enum_pattern
        (type_identifier)
        (binding)))))

================================================================================
Cast operator
================================================================================

value as i64

---

(source_file
  (expression_statement
    (cast_expression
      left: (identifier)
      type: (type_annotation
        (identifier)))))

================================================================================
Try cast operator
================================================================================

value as? Result

---

(source_file
  (expression_statement
    (try_cast_expression
      left: (identifier)
      type: (type_annotation
        (type_identifier)))))

================================================================================
Unary not
================================================================================

!x

---

(source_file
  (expression_statement
    (unary_expression
      (identifier))))

================================================================================
Function call
================================================================================

foo(1, 2)

---

(source_file
  (expression_statement
    (call_expression
      callee: (identifier)
      arguments: (argument_list
        (number)
        (number)))))

================================================================================
Member expression
================================================================================

x.y

---

(source_file
  (expression_statement
    (member_expression
      object: (identifier)
      property: (property_name
        (identifier)))))

================================================================================
Index expression
================================================================================

list[0]

---

(source_file
  (expression_statement
    (index_expression
      object: (identifier)
      index: (number))))

================================================================================
Parenthesized expression
================================================================================

(1 + 2)

---

(source_file
  (expression_statement
    (parenthesized_expression
      (binary_expression
        left: (number)
        right: (number)))))

================================================================================
If expression
================================================================================

if x { y } else { z }

---

(source_file
  (expression_statement
    (if_expression
      condition: (identifier)
      consequence: (block
        (expression_statement
          (identifier)))
      alternative: (block
        (expression_statement
          (identifier))))))

================================================================================
If-else-if expression
================================================================================

if a { 1 } else if b { 2 } else { 3 }

---

(source_file
  (expression_statement
    (if_expression
      condition: (identifier)
      consequence: (block
        (expression_statement
          (number)))
      alternative: (if_expression
        condition: (identifier)
        consequence: (block
          (expression_statement
            (number)))
        alternative: (block
          (expression_statement
            (number)))))))

================================================================================
Match expression
================================================================================

match x {
  1 => "one",
  _ => "other",
}

---

(source_file
  (expression_statement
    (match_expression
      subject: (identifier)
      (match_arm
        pattern: (literal_pattern
          (number))
        body: (string))
      (match_arm
        pattern: (wildcard_pattern)
        body: (string)))))

================================================================================
Loop expression
================================================================================

loop { break; }

---

(source_file
  (expression_statement
    (loop_expression
      body: (block
        (expression_statement
          (break_expression))))))

================================================================================
Rec expression
================================================================================

rec factorial(n - 1)

---

(source_file
  (expression_statement
    (rec_expression
      expression: (call_expression
        callee: (identifier)
        arguments: (argument_list
          (binary_expression
            left: (identifier)
            right: (number)))))))

================================================================================
Anonymous function expression
================================================================================

fn(x) { x + 1 }

---

(source_file
  (expression_statement
    (function_expression
      parameters: (parameter_list
        (function_parameter
          (binding)))
      body: (block
        (expression_statement
          (binary_expression
            left: (identifier)
            right: (number)))))))

================================================================================
Object expression
================================================================================

{ x: 1, y: 2 }

---

(source_file
  (expression_statement
    (object_expression
      (property
        key: (property_name
          (identifier))
        value: (number))
      (property
        key: (property_name
          (identifier))
        value: (number)))))

================================================================================
Path expression
================================================================================

Option::None

---

(source_file
  (expression_statement
    (path_expression
      (type_identifier)
      (type_identifier))))

================================================================================
Struct expression
================================================================================

Tree::Node { value: 1 }

---

(source_file
  (expression_statement
    (struct_expression
      type: (type_path
        (type_identifier)
        (type_identifier))
      fields: (object_expression
        (property
          key: (property_name
            (identifier))
          value: (number))))))

================================================================================
Block expression
================================================================================

{
  let x = 1;
  x + 1
}

---

(source_file
  (expression_statement
    (block
      (variable_declaration
        pattern: (pattern_assign
          pattern: (binding)
          default: (number)))
      (expression_statement
        (binary_expression
          left: (identifier)
          right: (number))))))

================================================================================
Line comment
================================================================================

// This is a comment
42

---

(source_file
  (line_comment)
  (expression_statement
    (number)))
